<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">藤书坊</string>
    <string name="my_purpose">以书会友，以书交友</string>
    <string name="qq_login">QQ登陆</string>
    <string name="sina_login">新浪微博登陆</string>
    <string name="wx_login">微信登陆</string>
    <string name="renren_login">人人登陆</string>
    <string name="just_look">随便看看</string>
    <string name="home">首页</string>
    <string name="commit">发布</string>
    <string name="message_section">消息</string>
    <string name="swipe">扫一扫</string>
    <string name="setting">设置</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">打开抽屉</string>
    <string name="drawer_close">关闭抽屉</string>
    <string name="book_author">作者：</string>
    <string name="book_publisher">出版社：</string>
    <string name="book_isbn">ISBN号：</string>
    <string name="book_name">书名：</string>
    <string name="tab_latest">最新</string>
    <string name="tab_texbook">教材</string>
    <string name="tab_program">编程</string>
    <string name="tab_kaoyan">考研</string>
    <string name="tab_give">赠送</string>
    <string name="btn_isbn">点击填写isbn号，自动查询基本信息</string>
    <string name="hint_bitian">必填</string>
    <string name="classify">分类：</string>
    <string name="how_old">新旧程度：</string>
    <string name="origin_price">原价：</string>
    <string name="how_sell">出售方式：</string>
    <string name="pay">付款</string>
    <string name="send">赠送</string>
    <string name="send_feedback">发送</string>
    <string name="sell_price">售价：</string>
    <string name="all_description">详细介绍：</string>
    <string name="remarks">备注：</string>
    <string name="add_cover">添加封面</string>
    <string name="modify_cover">更换封面</string>
    <string name="reset">重置</string>
    <string name="release">发布</string>
    <string name="want_buy">我想买</string>
    <string name="have_sell">我有卖</string>
   <string name="ask_give">求送</string>
    <string name="give_he">送给他</string>
    <string name="send_comments">发送</string>
    <string name="back">返回</string>
    <string name="hint_comments">最多150字</string>
    <string name="tv_input_isbn">请在下面的输入框中输入ISBN号</string>
    <string name="college_label">学院：</string>
    <string name="my_action">我想：</string>
    <string name="sell">出售</string>
    <string name="ask_buy">求购</string>
    <string-array name="main_classify">
        <item>教材</item>
        <item>文学</item>
        <item>流行</item>
        <item>文化</item>
        <item>生活</item>
        <item>经管</item>
        <item>科技</item>
        <item>编程</item>
        <item>考研</item>
    </string-array>

    <string-array name="colleges">
        <item>全部</item>
        <item>计算机学院</item>
        <item>通电工程学院</item>
        <item>电子工程学院</item>
        <item>机电工程学院</item>
        <item>物理与光电工程学院</item>
        <item>经济管理学院</item>
        <item>数学与统计学院</item>
        <item>人文学院</item>
        <item>外国语学院</item>
        <item>软件学院</item>
        <item>微电子学院</item>
        <item>空间科学与技术学院</item>
        <item>先进材料与纳米科技</item>
        <item>国际教育学院</item>
        <item>网络与继续教育学院</item>
    </string-array>

    <string-array name="how_old">
        <item>全新</item>
        <item>九成新</item>
        <item>八成新</item>
        <item>七成新</item>
        <item>六成新</item>
        <item>五成新</item>
        <item>四成新</item>
        <item>三成新</item>
        <item>三成新以下</item>
    </string-array>

    <string name="number">数量：</string>
    <string name="send_conditions">赠送条件：</string>
    <string name="my_sell">我的出售</string>
    <string name="my_buy">我的求购</string>
    <string name="my_send">我的赠送</string>
    <string name="my_ask_send">我的求赠</string>
    <string name="my_base_information">基本信息</string>
    <string name="message">留言：</string>
    <string name="zxing_msg_default_status">请将二维码或条形码对准取景框</string>
    <string name="hint_sell_price">单位/元</string>
    <string name="sure">确  定</string>
    <string name="cancel">取  消</string>
    <string name="choose_college_label">当前学院：</string>
    <string name="end">结束</string>
    <string name="contact_none">这位坊友很懒，什么都没留下，你可以给他(她)留言。</string>
    <string name="choose_contact">请选择联系方式</string>
    <string name="user_icon">头像</string>
    <string name="user_nicname">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="hobbit">兴趣</string>
    <string name="school">学校</string>
    <string name="email">邮箱</string>
    <string name="phone">电话</string>
    <string name="qq">QQ</string>
    <string name="wx">微信</string>
    <string name="address">宿舍楼</string>
    <string name="hint_et_birthday">例如：1993&#8211;1&#8211;1</string>
    <string name="hint_et_school">当前默认为西安电子科技大学</string>
    <string name="text_tip_contact">以下联系方式至少完成一种,但为了您更好地完成交易，建议全部填写</string>
    <string name="edit">编辑</string>
    <string name="delete">删除交易</string>
    <string name="complete">完成交易</string>
    <string name="about_us">关于我们</string>
    <string name="update_version">版本更新</string>
    <string name="your_idea">意见反馈</string>
    <string name="login_out">登出</string>
    <string name="hint_feedback">写下你的意见或想法</string>
    <string name="search">搜索</string>
    <string name="et_search">输入书名或ISBN号搜索</string>
</resources>
