<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#7de6e6e6"
    >

    <Button
        android:id="@+id/btn_back"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:text="@string/back"
        android:textColor="@color/btn_comment_tc"
        android:textSize="14sp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_centerVertical="true"
        android:background="@drawable/btn_comment_back_bg"
        />

    <EditText
        android:id="@+id/et_comments"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:imeOptions="actionDone"
        android:maxLength="150"
        android:hint="@string/hint_comments"
        android:focusableInTouchMode="true"
        android:layout_marginLeft="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginStart="70dp"
        android:background="@drawable/et_comment"
        android:layout_centerVertical="true"
        />

    <Button
        android:id="@+id/btn_send_comment"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:text="@string/send_comments"
        android:textColor="@color/btn_comment_tc"
        android:textSize="14sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_centerVertical="true"
        android:background="@drawable/btn_comment_send_bg"
        />

</RelativeLayout>