<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="8dp">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/shape_top_corner_no_bottom_line">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textSize="18sp"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/et_book_name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/hint_bitian"
            android:background="@null"
            android:scrollHorizontally="false"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_gravity="center_vertical"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/shape_no_corner_without_bottom">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:textSize="18sp"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/et_book_author"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/hint_bitian"
            android:background="@null"
            android:layout_gravity="center_vertical"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/shape_bottom_corner_no_top_line">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/book_publisher"
            android:textSize="18sp"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/et_book_publisher"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/hint_bitian"
            android:background="@null"
            android:layout_gravity="center_vertical"
            />
    </TableRow>

</TableLayout>